# MCP_tutorial_series

./: .gitignore  README.md  main.py  pyproject.toml
mcp_clients/: client.py  langchain.py  list_tools_and_resources.py
mcp_server/: datas.py  http_server.py  resources.py
