[project]
name = "tutorial-series"
version = "0.1.0"
description = "Code for a serie of tutorials on using MCP server in python, with privacy-by-design approach"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-ollama>=0.3.10",
    "mcp>=1.16.0",
    "ollama>=0.6.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0", # display, pretty print, logger
    "typer>=0.20.0", # command line
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
    "ty>=0.0.1a32",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["mcp_servers"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ty.rules]
division-by-zero = "warn"
deprecated = "error"

